k8s/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
  labels:
    app: fastapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
        - name: fastapi
          image: rahulshome/fastapi-todo:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: 256Mi
              cpu: "0.25"
            limits:
              memory: 1024Mi
              cpu: "0.50"
          ports:
            - containerPort: 80
