k8s/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-service
spec:
  ports:
    - port: 80
  selector:
    app: fastapi
