k8s/raect-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-service
spec:
  ports:
    - port: 80
  selector:
    app: react
